--- a/IntermediatePerl/12_module/Animal/Changes
+++ b/IntermediatePerl/12_module/Animal/Changes
@@ -1,4 +1,4 @@
-Revision history for Animal
+Revision history for ./Animal
 
 0.01    Date/time
         First version, released on an unsuspecting world.
