--- a/IntermediatePerl/12_module/Animal/README
+++ b/IntermediatePerl/12_module/Animal/README
@@ -1,4 +1,4 @@
-Animal
+./Animal
 
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
@@ -31,16 +31,16 @@ perldoc command.
 You can also look for information at:
 
     RT, CPAN's request tracker (report bugs here)
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Animal
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=./Animal
 
     AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Animal
+        http://annocpan.org/dist/./Animal
 
     CPAN Ratings
-        http://cpanratings.perl.org/d/Animal
+        http://cpanratings.perl.org/d/./Animal
 
     Search CPAN
-        http://search.cpan.org/dist/Animal/
+        http://search.cpan.org/dist/./Animal/
 
 
 LICENSE AND COPYRIGHT
