--- a/IntermediatePerl/17_export/Oogaboogoo/README
+++ b/IntermediatePerl/17_export/Oogaboogoo/README
@@ -1,115 +1,51 @@
-package My::List::Util;
+Oogaboogoo
 
-use 5.006;
-use strict;
-use warnings FATAL => 'all';
-use Exporter qw/import/;
-our @EXPORT = qw/sum shuffle/;
-our @EXPORT_OK = ();
-our %EXPORT_TAGS = (
-  all       => [ @EXPORT, @EXPORT_OK ],
-);
-=head1 NAME
+The README is used to introduce the module and provide instructions on
+how to install the module, any machine dependencies it may have (for
+example C compilers and installed libraries) and any other information
+that should be provided before the module is installed.
 
-My::List::Util - The great new My::List::Util!
-
-=head1 VERSION
-
-Version 0.01
-
-=cut
-
-our $VERSION = '0.01';
+A README file is required for CPAN modules since CPAN extracts the README
+file from a module distribution so that people browsing the archive
+can use it to get an idea of the module's uses. It is usually a good idea
+to provide version information here so that people can decide whether
+fixes for the module are worth downloading.
 
 
-=head1 SYNOPSIS
+INSTALLATION
 
-Sums and Shuffles lists
+To install this module, run the following commands:
 
+	perl Build.PL
+	./Build
+	./Build test
+	./Build install
 
-=head1 EXPORT
+SUPPORT AND DOCUMENTATION
 
-sum, shuffle
+After installing, you can find documentation for this module with the
+perldoc command.
 
-=head1 SUBROUTINES/METHODS
-
-=head2 sum
-
-=cut
-
-sub sum {
-  my $sum;
-  foreach my $num ( grep {  /\A-?\d+\.*\d*\z/ } @_ ) {
-    $sum += $num;
-  }
-  $sum;
-}
-
-=head2 shuffle
-
-=cut
-
-sub shuffle {
-  my @deck = @_;
-  return unless @deck;
-
-  my $i = @deck;
-  while( --$i ) {
-  my $j = int rand ($i+1);
-  @deck[$i,$j] = @deck[$j,$i];
-  }
-  @deck;
-}
-
-=head1 AUTHOR
-
-Pano Papadatos, C<< <pano at heypano.com> >>
-
-=head1 BUGS
-
-Please report any bugs or feature requests to C<bug-my-list-util at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=My-List-Util>.  I will be notified, and then you'll
-automatically be notified of progress on your bug as I make changes.
-
-
-
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc My::List::Util
-
+    perldoc Oogaboogoo
 
 You can also look for information at:
 
-=over 4
+    RT, CPAN's request tracker (report bugs here)
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Oogaboogoo
 
-=item * RT: CPAN's request tracker (report bugs here)
+    AnnoCPAN, Annotated CPAN documentation
+        http://annocpan.org/dist/Oogaboogoo
 
-L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=My-List-Util>
+    CPAN Ratings
+        http://cpanratings.perl.org/d/Oogaboogoo
 
-=item * AnnoCPAN: Annotated CPAN documentation
-
-L<http://annocpan.org/dist/My-List-Util>
-
-=item * CPAN Ratings
-
-L<http://cpanratings.perl.org/d/My-List-Util>
-
-=item * Search CPAN
-
-L<http://search.cpan.org/dist/My-List-Util/>
-
-=back
+    Search CPAN
+        http://search.cpan.org/dist/Oogaboogoo/
 
 
-=head1 ACKNOWLEDGEMENTS
+LICENSE AND COPYRIGHT
 
-
-=head1 LICENSE AND COPYRIGHT
-
-Copyright 2013 Pano Papadatos.
+Copyright (C) 2013 Pano Papadatos
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the the Artistic License (2.0). You may obtain a
@@ -147,7 +83,3 @@ CONTRIBUTOR WILL BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, OR
 CONSEQUENTIAL DAMAGES ARISING IN ANY WAY OUT OF THE USE OF THE PACKAGE,
 EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-
-=cut
-
-1; # End of My::List::Util
