--- a/Pano-Util/README
+++ b/Pano-Util/README
@@ -26,7 +26,7 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc Pano::Util
+    perldoc Acme::Pano::Util
 
 You can also look for information at:
 
